--- a/styles/bio_styles.css
+++ b/styles/bio_styles.css
@@ -1,6 +1,7 @@
 img {
 	border-radius: 50%;
 	width: 30%;
+	height: 200px;
 	max-width: 320px;
 	min-width: 180px;
 	box-shadow: 10px 10px 15px #011627;
